<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="#FFC0C0C0"
    tools:context=".TanyaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tanya Admin Seputar Bandung?"
        android:textSize="30sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/tanya_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question"
        android:inputType="textCapWords" />

    <TextView
        style="@style/Perjalanan"
        android:text="@string/perjalanan" />

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <CheckBox
        android:id="@+id/yes_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:text="@string/yes"
        android:textSize="16sp"/>

    <CheckBox
        android:id="@+id/no_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/no"
        android:textSize="16sp"/>

</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/send" />


</LinearLayout>